--- a/app/src/main/res/layout/fragment_reward.xml
+++ b/app/src/main/res/layout/fragment_reward.xml
@@ -45,7 +45,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="35dp"
-                android:text="짱세훈님"
+                tools:text="짱세훈님"
                 android:textColor="@color/white"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="@id/view_reward_main"
@@ -68,9 +68,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:drawableEnd="@drawable/ic_arrow_more"
-                android:drawableTint="@color/white"
-                android:text="3,456P"
+                app:drawableEndCompat="@drawable/ic_arrow_more"
+                app:drawableTint="@color/white"
+                tools:text="3,456P"
                 android:textColor="@color/white"
                 android:textSize="24sp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_point_image"
@@ -93,7 +93,6 @@
                 android:layout_height="80dp"
                 android:layout_marginHorizontal="25dp"
                 android:layout_marginTop="24dp"
-                android:clickable="true"
                 android:background="@drawable/shape_view_edge"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -115,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
-                android:text="출석하기"
+                android:text="@string/reward_attend"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 app:layout_constraintStart_toEndOf="@id/iv_reward_attend_image"
@@ -125,7 +124,8 @@
                 android:id="@+id/tv_reward_attend_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="적립 내역 보기"
+                android:text="@string/reward_point_history"
+                android:visibility="gone"
                 android:textColor="@color/gray_100"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="@id/tv_reward_attend"
@@ -156,7 +156,6 @@
                 android:layout_width="0dp"
                 android:layout_height="80dp"
                 android:layout_marginHorizontal="25dp"
-                android:clickable="true"
                 android:layout_marginTop="20dp"
                 android:background="@drawable/shape_view_edge"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -179,7 +178,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginTop="5dp"
-                android:text="걷기 랭킹"
+                android:text="@string/reward_walk_rank"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 app:layout_constraintStart_toEndOf="@id/iv_reward_walk_rank_image"
@@ -189,7 +188,7 @@
                 android:id="@+id/tv_reward_walk_rank_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="이번 주 랭킹 확인하기"
+                android:text="@string/reward_walk_rank_check"
                 android:textColor="@color/gray_100"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="@id/tv_reward_walk_rank"
@@ -241,7 +240,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/iv_reward_walk_image"
-                android:text="오늘의 걸음 수 : 10걸음"
+                tools:text="오늘의 걸음 수 : 10걸음"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="@id/iv_reward_walk_image"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_walk_image"
@@ -256,7 +255,7 @@
                 android:insetTop="0dp"
                 android:minWidth="30dp"
                 android:insetBottom="0dp"
-                android:text="50P"
+                tools:text="50P"
                 app:cornerRadius="5dp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_walk_image"
                 app:layout_constraintEnd_toEndOf="@id/view_reward_points"
@@ -276,7 +275,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/iv_reward_screen_time_image"
-                android:text="오늘의 스크린 타임 : 00시간"
+                tools:text="오늘의 스크린 타임 : 00시간"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="@id/iv_reward_screen_time_image"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_screen_time_image"
@@ -291,7 +290,7 @@
                 android:insetTop="0dp"
                 android:minWidth="30dp"
                 android:insetBottom="0dp"
-                android:text="50P"
+                tools:text="50P"
                 app:cornerRadius="5dp"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_screen_time_image"
                 app:layout_constraintEnd_toEndOf="@id/view_reward_points"
@@ -304,7 +303,6 @@
                 app:layout_constraintTop_toTopOf="@id/iv_reward_tumblr_image"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_tumblr_image"
                 app:layout_constraintStart_toStartOf="@id/iv_reward_tumblr_image"
-                android:clickable="true"
                 app:layout_constraintEnd_toEndOf="@id/btn_reward_tumblr_more"/>
 
             <ImageView
@@ -321,7 +319,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/iv_reward_tumblr_image"
-                android:text="텀블러 사용 인증하러 가기"
+                android:text="@string/reward_tumblr_confirm"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="@id/iv_reward_tumblr_image"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_tumblr_image"
@@ -355,7 +353,6 @@
                 app:layout_constraintTop_toTopOf="@id/iv_reward_transit_image"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_transit_image"
                 app:layout_constraintStart_toStartOf="@id/iv_reward_transit_image"
-                android:clickable="true"
                 app:layout_constraintEnd_toEndOf="@id/btn_reward_transit_more"/>
 
             <ImageView
@@ -372,7 +369,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/iv_reward_transit_image"
-                android:text="대중교통 이용 인증하러 가기"
+                android:text="@string/reward_transit_confirm"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="@id/iv_reward_transit_image"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_transit_image"
@@ -406,7 +403,6 @@
                 app:layout_constraintTop_toTopOf="@id/iv_reward_electric_vehicle_image"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_electric_vehicle_image"
                 app:layout_constraintStart_toStartOf="@id/iv_reward_electric_vehicle_image"
-                android:clickable="true"
                 app:layout_constraintEnd_toEndOf="@id/btn_reward_electric_vehicle_more"/>
 
             <ImageView
@@ -423,7 +419,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintStart_toEndOf="@id/iv_reward_electric_vehicle_image"
-                android:text="전기 이동수단 인증하러 가기"
+                android:text="@string/reward_electric_vehicle_confirm"
                 android:layout_marginStart="10dp"
                 app:layout_constraintTop_toTopOf="@id/iv_reward_electric_vehicle_image"
                 app:layout_constraintBottom_toBottomOf="@id/iv_reward_electric_vehicle_image"
