--- a/app/src/main/res/layout/fragment_tumblr_confirm.xml
+++ b/app/src/main/res/layout/fragment_tumblr_confirm.xml
@@ -72,7 +72,7 @@
                         app:layout_constraintStart_toStartOf="parent"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="텀블러 사용을 인증해보세요!" />
+                        android:text="@string/tumblr_confirm_title" />
 
                     <TextView
                         android:id="@+id/tv_tumblr_confirm_text_description"
@@ -80,7 +80,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
                         android:layout_marginEnd="30dp"
-                        android:text="우리가 1년 동안 1회용 플라스틱컵을 사용하지않는다면, 연간 19kg의 이산화탄소를 줄일 수 있으며,이는 25년생 중부지방소나무 두 그루를 심는 효과가 있어요!"
+                        android:text="@string/tumblr_confirm_description"
                         android:textColor="@color/black"
                         android:textSize="14sp"
                         app:layout_constraintEnd_toEndOf="parent"
