--- a/app/src/main/res/layout/fragment_payment_qr_dialog.xml
+++ b/app/src/main/res/layout/fragment_payment_qr_dialog.xml
@@ -7,12 +7,10 @@
 	android:background="@drawable/background_dialog"
 	tools:context=".PaymentQRDialogFragment">
 
-	<View
+	<com.google.android.material.bottomsheet.BottomSheetDragHandleView
 		android:id="@+id/view_handle"
-		android:layout_width="40dp"
-		android:layout_height="5dp"
-		android:layout_marginTop="10dp"
-		android:background="@drawable/bottom_sheet_handle"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
@@ -21,7 +19,6 @@
 		android:id="@+id/tv_payment_label"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="5dp"
 		android:text="결제 안내"
 		android:textSize="18sp"
 		android:textStyle="bold"
