--- a/app/src/main/res/layout/row_ranking.xml
+++ b/app/src/main/res/layout/row_ranking.xml
@@ -20,17 +20,6 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
 
-    <!-- 1,2,3등 메달 -->
-    <ImageView
-        android:id="@+id/iv_ranking_medal"
-        android:layout_width="24dp"
-        android:layout_height="24dp"
-        android:visibility="gone"
-        android:src="@drawable/img_1st"
-        app:layout_constraintStart_toEndOf="@id/tv_ranking_position"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintMarginStart="4dp" />
 
     <!-- 사용자 프로필 이미지 -->
     <com.google.android.material.imageview.ShapeableImageView
@@ -41,10 +30,9 @@
         app:shapeAppearanceOverlay="@style/RankingMyProfileRoundedImage"
         android:src="@drawable/img_today_news_home_tmp_2"
         android:layout_marginStart="10dp"
-        app:layout_constraintStart_toEndOf="@id/iv_ranking_medal"
+        app:layout_constraintStart_toEndOf="@id/tv_ranking_position"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintMarginStart="8dp" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <!-- 사용자 닉네임 -->
     <TextView
@@ -58,12 +46,11 @@
         android:layout_marginStart="15dp"
         app:layout_constraintStart_toEndOf="@id/iv_ranking_profile"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintMarginStart="8dp" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <!-- 걸음 수 아이콘-->
     <TextView
-        android:id="@+id/tv_ranking_steps_ㅑㅊ"
+        android:id="@+id/tv_ranking_steps_ic"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_weight="1"
@@ -74,8 +61,7 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/tv_ranking_steps"
-        app:layout_constraintMarginEnd="16dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        />
 
     <!-- 사용자 걸음 수 -->
     <TextView
@@ -89,8 +75,7 @@
         android:layout_marginEnd="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintMarginEnd="16dp" />
+        app:layout_constraintBottom_toBottomOf="parent" />
 
     <!-- 구분선 -->
     <View
