--- a/app/src/main/res/layout/fragment_news_besides.xml
+++ b/app/src/main/res/layout/fragment_news_besides.xml
@@ -7,99 +7,112 @@
     android:orientation="vertical"
     tools:context=".ui.home.news.NewsBesidesFragment">
 
-    <!-- HOT TOPIC -->
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="662dp"
+        android:fillViewport="true"
+        tools:context=".ui.home.news.NewsBesidesFragment">
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+        <!-- HOT TOPIC -->
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_news_besides_hot_topic"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:text="HOT TOPIC🔥"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <View
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/tv_news_besides_hot_topic_desc"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_marginEnd="18dp"
+                android:text="실시간 조회수 순위입니다."
+                android:textColor="@android:color/darker_gray"
+                android:textSize="12sp" />
+        </LinearLayout>
+
+
+        <!-- ViewPager2 (배너) -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="220dp"
+            android:layout_margin="16dp">
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/vp_news_besides_hot_topic"
+                android:layout_width="match_parent"
+                android:layout_height="220dp"
+                android:clipChildren="false"
+                android:clipToPadding="false"
+                tools:layout_editor_absoluteX="16dp"
+                tools:layout_editor_absoluteY="686dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/indicator_news_besides_hot_topic"
+                style="@style/AppTabIndicatorStyle"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="22dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <View
+            android:id="@+id/tab_divider"
+            android:layout_width="match_parent"
+            android:layout_height="10dp"
+            android:background="#D9D9D9"
+             />
+
+        <!-- 최신 뉴스 -->
         <TextView
-            android:id="@+id/tv_news_besides_hot_topic"
+            android:id="@+id/tv_news_besides_latest_news"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:text="HOT TOPIC🔥"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:layout_marginTop="10dp"
+            android:text="최신 뉴스"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/black" />
 
-        <View
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_weight="1" />
-
-        <TextView
-            android:id="@+id/tv_news_besides_hot_topic_desc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            android:layout_marginEnd="18dp"
-            android:text="실시간 조회수 순위입니다."
-            android:textColor="@android:color/darker_gray"
-            android:textSize="12sp" />
-    </LinearLayout>
-
-
-    <!-- ViewPager2 (배너) -->
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:layout_margin="16dp">
-
-        <androidx.viewpager2.widget.ViewPager2
-            android:id="@+id/vp_news_besides_hot_topic"
+        <!-- RecyclerView (뉴스 리스트) -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_news_besides_latest_news"
             android:layout_width="match_parent"
-            android:layout_height="220dp"
-            android:clipChildren="false"
-            android:clipToPadding="false"
-            tools:layout_editor_absoluteX="16dp"
-            tools:layout_editor_absoluteY="686dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
-
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/indicator_news_besides_hot_topic"
-            style="@style/AppTabIndicatorStyle"
-            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="22dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-    <View
-        android:id="@+id/tab_divider"
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="#D9D9D9"
-         />
-
-    <!-- 최신 뉴스 -->
-    <TextView
-        android:id="@+id/tv_news_besides_latest_news"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="10dp"
-        android:text="최신 뉴스"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black" />
-
-    <!-- RecyclerView (뉴스 리스트) -->
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rv_news_besides_latest_news"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:paddingBottom="16dp"
-        android:clipToPadding="false"
-        android:nestedScrollingEnabled="false"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        tools:listitem="@layout/row_latest_news" />
-
+            android:layout_marginTop="8dp"
+            android:paddingBottom="16dp"
+            android:clipToPadding="false"
+            android:nestedScrollingEnabled="false"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/row_latest_news" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
