--- a/app/src/main/res/layout/fragment_payment_qr.xml
+++ b/app/src/main/res/layout/fragment_payment_qr.xml
@@ -123,8 +123,8 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_margin="10dp"
-		android:textStyle="bold"
 		android:text="@string/payment_qr_refresh"
+		android:textStyle="bold"
 		app:layout_constraintStart_toStartOf="@id/view_qr"
 		app:layout_constraintTop_toTopOf="@id/view_qr"
 		tools:text="04:55" />
@@ -135,6 +135,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginStart="10dp"
 		android:src="@drawable/ic_refresh"
+		android:visibility="gone"
 		app:layout_constraintBottom_toBottomOf="@id/tv_qr_time"
 		app:layout_constraintStart_toEndOf="@id/tv_qr_time"
 		app:layout_constraintTop_toTopOf="@id/tv_qr_time" />
@@ -154,6 +155,7 @@
 		android:layout_height="140dp"
 		android:layout_marginTop="100dp"
 		android:background="@color/gray_10"
+		android:visibility="invisible"
 		app:layout_constraintEnd_toEndOf="@id/view_qr"
 		app:layout_constraintStart_toStartOf="@id/view_qr"
 		app:layout_constraintTop_toTopOf="@id/view_qr" />
