--- a/app/src/main/res/layout/fragment_electric_vehicle_confirm_photo.xml
+++ b/app/src/main/res/layout/fragment_electric_vehicle_confirm_photo.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.reward.TransitConfirmPhotoFragment">
+    tools:context=".ui.reward.ElectricVehicleConfirmPhotoFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         app:layout_constraintTop_toTopOf="parent"
@@ -20,55 +20,113 @@
         app:menu="@menu/menu_profile_edit"
         android:theme="?attr/actionBarTheme" />
 
-    <ImageView
-        android:id="@+id/iv_electric_photo_bus"
-        android:layout_width="185dp"
-        android:layout_height="185dp"
-        android:src="@drawable/img_elec"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_electric_photo" />
-
-    <ImageView
-        android:id="@+id/iv_electric_photo_photo"
-        android:layout_width="300dp"
-        app:layout_constraintTop_toBottomOf="@id/iv_electric_photo_bus"
-        android:layout_height="300dp"
-        android:layout_marginTop="60dp"
-        android:scaleType="centerCrop"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:background="@drawable/shape_coupon_radius" />
-
-    <Button
-        android:id="@+id/btn_electric_photo_confirm"
-        android:layout_width="0dp"
-        android:layout_height="48dp"
-        android:layout_marginHorizontal="50dp"
-        android:layout_marginTop="60dp"
-        android:text="@string/electric_vehicle_confirm_btn_title"
-        android:textSize="14sp"
-        android:textStyle="bold"
-        app:cornerRadius="5dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/iv_electric_photo_photo" />
-
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_transit_photo_loading"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:visibility="gone">
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_electric_photo"
+        app:layout_constraintBottom_toBottomOf="parent">
 
-
-        <com.google.android.material.progressindicator.CircularProgressIndicator
-            android:id="@+id/progress_transit_photo_loading"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:indeterminate="true"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+        <View
+            android:id="@+id/view_electric_confirm"
+            android:layout_width="0dp"
+            android:layout_height="210dp"
+            android:background="@color/primary"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintEnd_toEndOf="parent"/>
+
+        <ImageView
+            android:id="@+id/iv_electric_confirm_image"
+            android:layout_width="160dp"
+            android:layout_height="160dp"
+            android:src="@drawable/img_elec"
+            android:layout_marginBottom="45dp"
+            app:layout_constraintBottom_toBottomOf="@id/view_electric_confirm"
+            app:layout_constraintStart_toStartOf="@id/view_electric_confirm"
+            app:layout_constraintEnd_toEndOf="@id/view_electric_confirm"/>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/card_electric_confirm"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="170dp"
+            app:cardCornerRadius="30dp"
+            app:layout_constraintTop_toTopOf="@id/view_electric_confirm"
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cv_electric_photo_photo"
+                    android:layout_width="300dp"
+                    android:layout_height="300dp"
+                    app:cardCornerRadius="10dp"
+                    android:layout_marginTop="50dp"
+                    android:elevation="0dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <ImageView
+                        android:id="@+id/iv_electric_photo_photo"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:background="@drawable/background_add_screenshot"/>
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/tv_electric_confirm_text_description_2"
+                    android:layout_width="300dp"
+                    android:layout_height="wrap_content"
+                    android:lineSpacingExtra="7dp"
+                    android:text="결제 금액, 결제 일시, 사용처가 포함된 스크린샷을 제출해 주세요. 검토 후 포인트를 지급해 드립니다."
+                    android:textColor="@color/black"
+                    android:textSize="13sp"
+                    android:layout_marginTop="15dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/cv_electric_photo_photo" />
+
+                <Button
+                    android:id="@+id/btn_electric_photo_confirm"
+                    android:layout_width="300dp"
+                    android:layout_height="48dp"
+                    android:layout_marginHorizontal="50dp"
+                    android:text="스크린샷 첨부하기"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:cornerRadius="5dp"
+                    android:layout_marginBottom="70dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent" />
+
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:id="@+id/layout_electric_photo_loading"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="gone"
+                    android:background="@color/transparent"
+                    android:elevation="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <com.google.android.material.progressindicator.CircularProgressIndicator
+                        android:id="@+id/progress_electric_photo_loading"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:indeterminate="true"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
